# myworkspace-cli

./: .coveragerc  .cz.toml  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  myworkspace.example.json  myworkspace.json  pyproject copy.toml  pyproject.toml
.github/workflows/: bumpversion.yml  ci.yml
myworkspace/: core.py  exceptions.py  services.py
myworkspace/scripts/: cli.py
tests/: test_cli.py  test_workspace.py
workspace/: core.py
workspace/scripts/: cli.py
