[tool.flakehell]
max_line_length = 120
format = "grouped"
source = true
statistics = true

[tool.black]
line_length=120

[tool.flakehell.plugins]
pycodestyle = ["+*"]
pyflakes = ["+*" ]
flake8-import-order = ["+*"]
cohesion = ["+*"]
flake8-eradicate = ["+*"]
flake8-black = ["+*"]
pylint = ["+*"]
flake8-simplify = ["+*"]

[tool.flakehell.exceptions."tests/"]
pycodestyle = ["-F401", "-E501"]
pyflakes = ["-*"]
cohesion = ["-*"]

[tool.poetry]
name = "workspace"
version = "0.1.0"
description = "Herramienta para construir mi espacio de trabajo."
authors = ["engel <engeljavierpinto@gmail.com>"]

[tool.poetry.scripts]
workspace = "workspace.scripts.cli:workspace"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
