[tool.flakehell]
max_line_length = 120
format = "grouped"
source = true
statistics = true

[tool.black]
line_length=120

[tool.flakehell.plugins]
pycodestyle = ["+*"]
pyflakes = ["+*" ]
flake8-import-order = ["+*"]
flake8-eradicate = ["+*"]
flake8-black = ["+*"]
pylint = ["+*"]
flake8-simplify = ["+*"]

[tool.flakehell.exceptions."tests/"]
pycodestyle = ["-F401", "-E501"]
pyflakes = ["-*"]

[tool.poetry]
name = "myworkspace"
version = "2.0.0"
description = "Herramienta para construir mi espacio de trabajo."
authors = ["engel <engeljavierpinto@gmail.com>"]

[tool.poetry.scripts]
myworkspace = "myworkspace.scripts.cli:workspace"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]
pytest-mock = "^3.5.1"
pytest-cov = "^2.11.1"
MutPy = "^0.6.1"
flakehell = "^0.9.0"
flake8-black = "^0.2.1"
flake8-eradicate = "^1.0.0"
flake8-import-order = "^0.18.1"
flake8-simplify = "^0.14.0"
pytest = "^6.2.3"
black = "^20.8b1"
commitizen = "^2.17.2"
pre-commit = "^2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
