[tool.black]
line_length=120

[tool.poetry]
name = "myworkspace"
version = "0.1.0"
description = "Herramienta para construir mi espacio de trabajo."
authors = ["engel <engeljavierpinto@gmail.com>"]

[tool.poetry.scripts]
myworkspace = "myworkspace.scripts.cli:workspace"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
mutpy = "^0.6.1"
flakehell = "^0.9.0"
flake8-black = "^0.3.6"
flake8-eradicate = "^1.5.0"
flake8-import-order = "^0.18.2"
flake8-simplify = "^0.21.0"
pytest = "^8.3.3"
black = "^24.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
